# Networking

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  TestServer.c  run.sh  runDocker.sh
data/: users.txt
src/: Launcher.c  Launcher.h  Server.c  Server.h
src/Client/: Launcher.c  Launcher.h
src/DBReader/: DBReader.c  DBReader.h
src/Math/: PrimeNumbers.c  PrimeNumbers.h
src/Server/: Server.c
src/Utils/: Utils.c  Utils.h
